--- a/Initial_XGB.ipynb
+++ b/Initial_XGB.ipynb
@@ -3627,7 +3627,9 @@
    ],
    "source": [
     "train=train.merge(train_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
+    "del train_lat_long\n",
     "test=test.merge(test_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
+    "del test_lat_long\n",
     "train.loc[train['id']==11054]"
    ]
   },
