--- a/Initial_XGB.ipynb
+++ b/Initial_XGB.ipynb
@@ -6446,8 +6446,8 @@
     "xgbreg = xgb.XGBRegressor()\n",
     "param_grid = {\n",
     "       #'n_estimators': [500],\n",
-    "       'learning_rate': [.4, .045, 0.05, .055], #[.05], #\n",
-    "       'max_depth': [4,5,6,7],\n",
+    "       'learning_rate': [.05], #[.4, .045, 0.05, .055], #\n",
+    "       'max_depth': [5],#[4,5,6,7],\n",
     "       'subsample': [.65, 0.7, .75], #[.7], #\n",
     "       'colsample_bytree': [.6, .65, 0.7, 0.75], #[.7],#\n",
     "        'seed':[123]#np.arange(20)\n",
