--- a/Latest_Iteration.ipynb
+++ b/Latest_Iteration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -45,27 +45,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5427002.0</td>\n",
+       "      <td>5688274.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>7966847.0</td>\n",
+       "      <td>8388348.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5521049.0</td>\n",
+       "      <td>5484392.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>6126142.0</td>\n",
+       "      <td>6069456.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4869350.0</td>\n",
+       "      <td>5227660.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -73,14 +73,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5427002.0\n",
-       "1  30475  7966847.0\n",
-       "2  30476  5521049.0\n",
-       "3  30477  6126142.0\n",
-       "4  30478  4869350.0"
+       "0  30474  5688274.0\n",
+       "1  30475  8388348.0\n",
+       "2  30476  5484392.0\n",
+       "3  30477  6069456.0\n",
+       "4  30478  5227660.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,9 +203,15 @@
     "test['week_year_cnt'] = week_year.map(week_year_cnt_map)\n",
     "\n",
     "# Add month and day-of-week\n",
+    "###\n",
+    "train['year'] = train.timestamp.dt.year\n",
+    "###\n",
     "train['month'] = train.timestamp.dt.month\n",
     "train['dow'] = train.timestamp.dt.dayofweek\n",
     "\n",
+    "###\n",
+    "test['year'] = test.timestamp.dt.year\n",
+    "###\n",
     "test['month'] = test.timestamp.dt.month\n",
     "test['dow'] = test.timestamp.dt.dayofweek\n",
     "\n",
@@ -274,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -332,7 +338,7 @@
        "4  30478  5101360.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -397,8 +403,8 @@
      "output_type": "stream",
      "text": [
       "(38132, 390)\n",
-      "(38132, 394)\n",
-      "(38132, 394)\n"
+      "(38132, 395)\n",
+      "(38132, 395)\n"
      ]
     },
     {
@@ -417,27 +423,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5351010.5</td>\n",
+       "      <td>5698897.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>7826861.0</td>\n",
+       "      <td>8215789.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5173095.0</td>\n",
+       "      <td>5673461.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5463000.0</td>\n",
+       "      <td>5857040.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4882758.0</td>\n",
+       "      <td>5140059.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -445,14 +451,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5351010.5\n",
-       "1  30475  7826861.0\n",
-       "2  30476  5173095.0\n",
-       "3  30477  5463000.0\n",
-       "4  30478  4882758.0"
+       "0  30474  5698897.0\n",
+       "1  30475  8215789.5\n",
+       "2  30476  5673461.0\n",
+       "3  30477  5857040.5\n",
+       "4  30478  5140059.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,6 +496,9 @@
     "df_all['week_year_cnt'] = week_year.map(week_year_cnt_map)\n",
     "\n",
     "# Add month and day-of-week\n",
+    "###\n",
+    "df_all['year'] = df_all.timestamp.dt.year\n",
+    "###\n",
     "df_all['month'] = df_all.timestamp.dt.month\n",
     "df_all['dow'] = df_all.timestamp.dt.dayofweek\n",
     "\n",
@@ -562,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -579,14 +588,27 @@
     "                              .3*np.log(result.price_doc_gunja) )\n",
     "result.drop([\"price_doc_louis\",\"price_doc_bruno\",\"price_doc_follow\",\"price_doc_gunja\"],axis=1,inplace=True)\n",
     "result.head()\n",
-    "result.to_csv('submission_jun4_5.csv', index=False)"
+    "result.to_csv('submission_jun5_1_seed5_withYear.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -597,6 +619,18 @@
    "display_name": "Python 2",
    "language": "python",
    "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
