--- a/Initial_XGB.ipynb
+++ b/Initial_XGB.ipynb
@@ -6327,7 +6327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -6411,36 +6411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:28: RuntimeWarning: invalid value encountered in log\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:28: RuntimeWarning: invalid value encountered in log\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:28: RuntimeWarning: invalid value encountered in log\n",
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/ipykernel/__main__.py:28: RuntimeWarning: invalid value encountered in log\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "eXtreme Gradient Boosting regression...\n",
-      "Best Params:\n",
-      "{'subsample': 0.75, 'learning_rate': 0.045, 'seed': 123, 'colsample_bytree': 0.75, 'max_depth': 7}\n",
-      "Best CV Score:\n",
-      "0.464491819425\n",
-      "1044.71115675\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0=time()\n",
     "xgbreg = xgb.XGBRegressor()\n",
@@ -6448,9 +6425,9 @@
     "       #'n_estimators': [500],\n",
     "       'learning_rate': [.05], #[.4, .045, 0.05, .055], #\n",
     "       'max_depth': [5],#[4,5,6,7],\n",
-    "       'subsample': [.65, 0.7, .75], #[.7], #\n",
-    "       'colsample_bytree': [.6, .65, 0.7, 0.75], #[.7],#\n",
-    "        'seed':[123]#np.arange(20)\n",
+    "       'subsample': [.7], #[.65, 0.7, .75], #\n",
+    "       'colsample_bytree': [.7],#[.6, .65, 0.7, 0.75], #\n",
+    "        'seed':np.arange(20,40) #[123]#\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
     "model.fit(X_train, y_train)\n",
