--- a/Latest_Iteration.ipynb
+++ b/Latest_Iteration.ipynb
@@ -17,7 +17,10 @@
     "from sklearn import model_selection, preprocessing\n",
     "import xgboost as xgb\n",
     "import datetime\n",
-    "seed = 5"
+    "seed = 37\n",
+    "mult1 = .969\n",
+    "mult2 = .969\n",
+    "W_model_1_2 = .714"
    ]
   },
   {
@@ -45,27 +48,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5688274.0</td>\n",
+       "      <td>5551838.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8388348.0</td>\n",
+       "      <td>7863369.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5484392.0</td>\n",
+       "      <td>5352663.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>6069456.0</td>\n",
+       "      <td>5784464.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5227660.0</td>\n",
+       "      <td>4867012.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -73,11 +76,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5688274.0\n",
-       "1  30475  8388348.0\n",
-       "2  30476  5484392.0\n",
-       "3  30477  6069456.0\n",
-       "4  30478  5227660.0"
+       "0  30474  5551838.0\n",
+       "1  30475  7863369.0\n",
+       "2  30476  5352663.0\n",
+       "3  30477  5784464.0\n",
+       "4  30478  4867012.0"
       ]
      },
      "execution_count": 2,
@@ -204,13 +207,13 @@
     "\n",
     "# Add month and day-of-week\n",
     "###\n",
-    "train['year'] = train.timestamp.dt.year\n",
+    "#train['year'] = train.timestamp.dt.year\n",
     "###\n",
     "train['month'] = train.timestamp.dt.month\n",
     "train['dow'] = train.timestamp.dt.dayofweek\n",
     "\n",
     "###\n",
-    "test['year'] = test.timestamp.dt.year\n",
+    "#test['year'] = test.timestamp.dt.year\n",
     "###\n",
     "test['month'] = test.timestamp.dt.month\n",
     "test['dow'] = test.timestamp.dt.dayofweek\n",
@@ -303,27 +306,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5376609.0</td>\n",
+       "      <td>5253741.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8204070.0</td>\n",
+       "      <td>8001455.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5311644.5</td>\n",
+       "      <td>5493946.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5454563.0</td>\n",
+       "      <td>5442932.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5101360.5</td>\n",
+       "      <td>5147530.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -331,11 +334,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5376609.0\n",
-       "1  30475  8204070.0\n",
-       "2  30476  5311644.5\n",
-       "3  30477  5454563.0\n",
-       "4  30478  5101360.5"
+       "0  30474  5253741.5\n",
+       "1  30475  8001455.0\n",
+       "2  30476  5493946.0\n",
+       "3  30477  5442932.0\n",
+       "4  30478  5147530.0"
       ]
      },
      "execution_count": 3,
@@ -344,13 +347,13 @@
     }
    ],
    "source": [
-    "mult = .969\n",
+    "#mult = .969\n",
     "\n",
     "train = pd.read_csv('./input/train.csv')\n",
     "test = pd.read_csv('./input/test.csv')\n",
     "id_test = test.id\n",
     "\n",
-    "y_train = train[\"price_doc\"] * mult + 10\n",
+    "y_train = train[\"price_doc\"] * mult1 + 10\n",
     "x_train = train.drop([\"id\", \"timestamp\", \"price_doc\"], axis=1)\n",
     "x_test = test.drop([\"id\", \"timestamp\"], axis=1)\n",
     "\n",
@@ -403,8 +406,8 @@
      "output_type": "stream",
      "text": [
       "(38132, 390)\n",
-      "(38132, 395)\n",
-      "(38132, 395)\n"
+      "(38132, 394)\n",
+      "(38132, 394)\n"
      ]
     },
     {
@@ -423,27 +426,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5698897.0</td>\n",
+       "      <td>5072660.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8215789.5</td>\n",
+       "      <td>8023735.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5673461.0</td>\n",
+       "      <td>5274591.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5857040.5</td>\n",
+       "      <td>5597474.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5140059.5</td>\n",
+       "      <td>4715896.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -451,11 +454,11 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5698897.0\n",
-       "1  30475  8215789.5\n",
-       "2  30476  5673461.0\n",
-       "3  30477  5857040.5\n",
-       "4  30478  5140059.5"
+       "0  30474  5072660.0\n",
+       "1  30475  8023735.5\n",
+       "2  30476  5274591.0\n",
+       "3  30477  5597474.5\n",
+       "4  30478  4715896.5"
       ]
      },
      "execution_count": 4,
@@ -464,7 +467,7 @@
     }
    ],
    "source": [
-    "mult = .969\n",
+    "#mult = .969\n",
     "# Any results you write to the current directory are saved as output.\n",
     "df_train = pd.read_csv(\"./input/train.csv\", parse_dates=['timestamp'])\n",
     "df_test = pd.read_csv(\"./input/test.csv\", parse_dates=['timestamp'])\n",
@@ -472,7 +475,7 @@
     "\n",
     "df_train.drop(df_train[df_train[\"life_sq\"] > 7000].index, inplace=True)\n",
     "\n",
-    "y_train = df_train['price_doc'].values  * mult + 10\n",
+    "y_train = df_train['price_doc'].values  * mult2 + 10\n",
     "id_test = df_test['id']\n",
     "\n",
     "df_train.drop(['id', 'price_doc'], axis=1, inplace=True)\n",
@@ -497,7 +500,7 @@
     "\n",
     "# Add month and day-of-week\n",
     "###\n",
-    "df_all['year'] = df_all.timestamp.dt.year\n",
+    "#df_all['year'] = df_all.timestamp.dt.year\n",
     "###\n",
     "df_all['month'] = df_all.timestamp.dt.month\n",
     "df_all['dow'] = df_all.timestamp.dt.dayofweek\n",
@@ -580,15 +583,15 @@
    "outputs": [],
    "source": [
     "first_result = output.merge(df_sub, on=\"id\", suffixes=['_louis','_bruno'])\n",
-    "first_result[\"price_doc\"] = np.exp( .714*np.log(first_result.price_doc_louis) + \n",
-    "                                    .286*np.log(first_result.price_doc_bruno) )  # multiplies out to .5 & .2\n",
+    "first_result[\"price_doc\"] = np.exp( W_model_1_2*np.log(first_result.price_doc_louis) + \n",
+    "                                    (1-W_model_1_2)*np.log(first_result.price_doc_bruno) )  # multiplies out to .5 & .2\n",
     "result = first_result.merge(gunja_output, on=\"id\", suffixes=['_follow','_gunja'])\n",
     "\n",
     "result[\"price_doc\"] = np.exp( .7*np.log(result.price_doc_follow) + \n",
     "                              .3*np.log(result.price_doc_gunja) )\n",
     "result.drop([\"price_doc_louis\",\"price_doc_bruno\",\"price_doc_follow\",\"price_doc_gunja\"],axis=1,inplace=True)\n",
     "result.head()\n",
-    "result.to_csv('submission_jun5_1_seed5_withYear.csv', index=False)"
+    "result.to_csv('submission_jun5_3_seed37_withoutYear.csv', index=False)"
    ]
   },
   {
