--- a/Initial_XGB_2_Additional_Features.ipynb
+++ b/Initial_XGB_2_Additional_Features.ipynb
@@ -1623,10 +1623,10 @@
     "xgbreg = xgb.XGBRegressor()\n",
     "param_grid = {\n",
     "       #'n_estimators': [500],\n",
-    "       'learning_rate': [.4, .045, 0.05, .055], #[.05], #\n",
-    "       'max_depth': [4,5,6,7],\n",
+    "       'learning_rate': [0.05, .15, .2, .25], #[.05], #\n",
+    "       'max_depth': [3, 4,5,6,7],\n",
     "       'subsample': [.65, 0.7, .75], #[.7], #\n",
-    "       'colsample_bytree': [.6, .65, 0.7, 0.75], #[.7],#\n",
+    "       'colsample_bytree': [.65, 0.7, 0.75], #[.7],#\n",
     "        'seed':[123]#np.arange(20)\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
@@ -1637,6 +1637,7 @@
     "print('Best CV Score:')\n",
     "print(-model.best_score_)\n",
     "print((time()-t0)/60)\n",
+    "\n",
     "\n",
     "\n",
     "\n",
