--- a/Initial_XGB_2_Additional_Features.ipynb
+++ b/Initial_XGB_2_Additional_Features.ipynb
@@ -27,8 +27,8 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "from sklearn import preprocessing #model_selection, \n",
-    "from XGBoostPackage import xgbClass\n",
-    "from CrossValidation import CVScore\n",
+    "#from XGBoostPackage import xgbClass\n",
+    "#from CrossValidation import CVScore\n",
     "from sklearn.grid_search import GridSearchCV\n",
     "\n",
     "import xgboost as xgb\n",
