--- a/Initial_XGB.ipynb
+++ b/Initial_XGB.ipynb
@@ -26,7 +26,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "%matplotlib inline\n",
-    "from sklearn import model_selection, preprocessing\n",
+    "from sklearn import preprocessing #model_selection, \n",
     "from XGBoostPackage import xgbClass\n",
     "from CrossValidation import CVScore\n",
     "from sklearn.grid_search import GridSearchCV\n",
@@ -2455,7 +2455,7 @@
     }
    ],
    "source": [
-    "train.head()"
+    "#train.head()"
    ]
   },
   {
@@ -2653,13 +2653,13 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(12,8))\n",
-    "plt.subplot(2,2,1)\n",
-    "sns.violinplot(data=train,x='year',y='price_doc')\n",
-    "plt.ylim(-.1e8,.3e8)\n",
-    "plt.subplot(2,2,2)\n",
-    "sns.violinplot(data=train,x='month',y='price_doc')\n",
-    "plt.ylim(-.1e8,.2e8)\n"
+    "# plt.figure(figsize=(12,8))\n",
+    "# plt.subplot(2,2,1)\n",
+    "# sns.violinplot(data=train,x='year',y='price_doc')\n",
+    "# plt.ylim(-.1e8,.3e8)\n",
+    "# plt.subplot(2,2,2)\n",
+    "# sns.violinplot(data=train,x='month',y='price_doc')\n",
+    "# plt.ylim(-.1e8,.2e8)\n"
    ]
   },
   {
@@ -2753,9 +2753,9 @@
     }
    ],
    "source": [
-    "train_lat_long=pd.read_csv(\"./input/train_lat_lon.csv\")\n",
-    "test_lat_long=pd.read_csv(\"./input/test_lat_lon.csv\")\n",
-    "train_lat_long.head()"
+    "# train_lat_long=pd.read_csv(\"./input/train_lat_lon.csv\")\n",
+    "# test_lat_long=pd.read_csv(\"./input/test_lat_lon.csv\")\n",
+    "# train_lat_long.head()"
    ]
   },
   {
@@ -3685,11 +3685,11 @@
     }
    ],
    "source": [
-    "train=train.merge(train_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
-    "del train_lat_long\n",
-    "test=test.merge(test_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
-    "del test_lat_long\n",
-    "train.loc[train['id']==11054]"
+    "# train=train.merge(train_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
+    "# del train_lat_long\n",
+    "# test=test.merge(test_lat_long[[\"id\",\"lat\",\"lon\"]],left_on='id',right_on='id')\n",
+    "# del test_lat_long\n",
+    "# train.loc[train['id']==11054]"
    ]
   },
   {
@@ -6167,7 +6167,7 @@
     }
    ],
    "source": [
-    "train.head()"
+    "# train.head()"
    ]
   },
   {
@@ -6191,8 +6191,8 @@
     }
    ],
    "source": [
-    "sns.lmplot(x=\"lon\",y=\"lat\",scatter_kws={'alpha':.4,'s':30}, size=9, fit_reg=False, data=train)\n",
-    "axes=plt.gca()"
+    "# sns.lmplot(x=\"lon\",y=\"lat\",scatter_kws={'alpha':.4,'s':30}, size=9, fit_reg=False, data=train)\n",
+    "# axes=plt.gca()"
    ]
   },
   {
@@ -6205,56 +6205,56 @@
    },
    "outputs": [],
    "source": [
-    "import math\n",
-    "def cart2rho(x, y):\n",
-    "    rho = np.sqrt(x**2 + y**2)\n",
-    "    return rho\n",
+    "# import math\n",
+    "# def cart2rho(x, y):\n",
+    "#     rho = np.sqrt(x**2 + y**2)\n",
+    "#     return rho\n",
     "\n",
     "\n",
-    "def cart2phi(x, y):\n",
-    "    phi = np.arctan2(y, x)\n",
-    "    return phi\n",
+    "# def cart2phi(x, y):\n",
+    "#     phi = np.arctan2(y, x)\n",
+    "#     return phi\n",
     "\n",
-    "#center long/lat of moscow: (37.6173, 55.7558)\n",
-    "def rotation_x(row, alpha):\n",
-    "    y = row['lat']-55.7558\n",
-    "    x = row['lon']-(37.6173)\n",
-    "    return x*math.cos(alpha) + y*math.sin(alpha)\n",
-    "\n",
-    "\n",
-    "def rotation_y(row, alpha):\n",
-    "    y = row['lat']-55.7558\n",
-    "    x = row['lon']-(37.6173)\n",
-    "    return y*math.cos(alpha) - x*math.sin(alpha)\n",
+    "# #center long/lat of moscow: (37.6173, 55.7558)\n",
+    "# def rotation_x(row, alpha):\n",
+    "#     y = row['lat']-55.7558\n",
+    "#     x = row['lon']-(37.6173)\n",
+    "#     return x*math.cos(alpha) + y*math.sin(alpha)\n",
     "\n",
     "\n",
-    "def add_rotation(degrees, df):\n",
-    "    namex = \"rot\" + str(degrees) + \"_X\"\n",
-    "    namey = \"rot\" + str(degrees) + \"_Y\"\n",
+    "# def rotation_y(row, alpha):\n",
+    "#     y = row['lat']-55.7558\n",
+    "#     x = row['lon']-(37.6173)\n",
+    "#     return y*math.cos(alpha) - x*math.sin(alpha)\n",
     "\n",
-    "    df['num_' + namex] = df.apply(lambda row: rotation_x(row, math.pi/(180/degrees)), axis=1)\n",
-    "    df['num_' + namey] = df.apply(lambda row: rotation_y(row, math.pi/(180/degrees)), axis=1)\n",
     "\n",
-    "    return df\n",
+    "# def add_rotation(degrees, df):\n",
+    "#     namex = \"rot\" + str(degrees) + \"_X\"\n",
+    "#     namey = \"rot\" + str(degrees) + \"_Y\"\n",
     "\n",
-    "def add_dist_to_center(row):\n",
-    "    y = row['lat']-55.7558\n",
-    "    x = row['lon']-(37.6173)\n",
-    "    return cart2phi(x,y)\n",
+    "#     df['num_' + namex] = df.apply(lambda row: rotation_x(row, math.pi/(180/degrees)), axis=1)\n",
+    "#     df['num_' + namey] = df.apply(lambda row: rotation_y(row, math.pi/(180/degrees)), axis=1)\n",
     "\n",
-    "def operate_on_coordinates(tr_df, te_df):\n",
-    "    for df in [tr_df, te_df]:\n",
-    "        #polar coordinates system\n",
-    "#         df[\"num_rho\"] = df.apply(lambda x: cart2rho(x[\"latitude\"] - 40.78222222, x[\"longitude\"]+73.96527777), axis=1)\n",
-    "#         df[\"num_phi\"] = df.apply(lambda x: cart2phi(x[\"latitude\"] - 40.78222222, x[\"longitude\"]+73.96527777), axis=1)\n",
-    "#         #rotations\n",
-    "        for angle in [15,30,45,60]:\n",
-    "            df = add_rotation(angle, df)\n",
-    "        df['dist_to_center']=df.apply(lambda row: add_dist_to_center(row), axis=1)\n",
+    "#     return df\n",
     "\n",
-    "    return tr_df, te_df\n",
+    "# def add_dist_to_center(row):\n",
+    "#     y = row['lat']-55.7558\n",
+    "#     x = row['lon']-(37.6173)\n",
+    "#     return cart2phi(x,y)\n",
     "\n",
-    "train, test= operate_on_coordinates(train, test)"
+    "# def operate_on_coordinates(tr_df, te_df):\n",
+    "#     for df in [tr_df, te_df]:\n",
+    "#         #polar coordinates system\n",
+    "# #         df[\"num_rho\"] = df.apply(lambda x: cart2rho(x[\"latitude\"] - 40.78222222, x[\"longitude\"]+73.96527777), axis=1)\n",
+    "# #         df[\"num_phi\"] = df.apply(lambda x: cart2phi(x[\"latitude\"] - 40.78222222, x[\"longitude\"]+73.96527777), axis=1)\n",
+    "# #         #rotations\n",
+    "#         for angle in [15,30,45,60]:\n",
+    "#             df = add_rotation(angle, df)\n",
+    "#         df['dist_to_center']=df.apply(lambda row: add_dist_to_center(row), axis=1)\n",
+    "\n",
+    "#     return tr_df, te_df\n",
+    "\n",
+    "# train, test= operate_on_coordinates(train, test)"
    ]
   },
   {
@@ -6288,7 +6288,7 @@
     }
    ],
    "source": [
-    "sns.regplot(data=train.sample(1000),x=\"dist_to_center\",y=\"price_doc\")"
+    "# sns.regplot(data=train.sample(1000),x=\"dist_to_center\",y=\"price_doc\")"
    ]
   },
   {
@@ -6322,7 +6322,7 @@
     }
    ],
    "source": [
-    "train['full_sq'].hist(bins=100, figsize=(12,8))"
+    "# train['full_sq'].hist(bins=100, figsize=(12,8))"
    ]
   },
   {
@@ -6381,30 +6381,30 @@
     }
    ],
    "source": [
-    "xgb_params = {\n",
-    "    'eta': 0.05,\n",
-    "    'max_depth': 5,\n",
-    "    'subsample': 0.7,\n",
-    "    'colsample_bytree': 0.7,\n",
-    "    'objective': 'reg:linear',\n",
-    "    'eval_metric': 'rmse',\n",
-    "    'silent': 1,\n",
-    "    'booster' :'gbtree',\n",
-    "    'tuneLength': 3,\n",
-    "    'seed': 123\n",
-    "}\n",
-    "num_rounds=400\n",
+    "# xgb_params = {\n",
+    "#     'eta': 0.05,\n",
+    "#     'max_depth': 5,\n",
+    "#     'subsample': 0.7,\n",
+    "#     'colsample_bytree': 0.7,\n",
+    "#     'objective': 'reg:linear',\n",
+    "#     'eval_metric': 'rmse',\n",
+    "#     'silent': 1,\n",
+    "#     'booster' :'gbtree',\n",
+    "#     'tuneLength': 3,\n",
+    "#     'seed': 123\n",
+    "# }\n",
+    "# num_rounds=400\n",
     "\n",
-    "X_fit, X_val, y_fit, y_val=train_test_split(X_train[:], y_train[:], test_size=0.2, random_state=123)\n",
-    "xgfit = xgb.DMatrix(X_fit, label=y_fit)\n",
-    "xgval = xgb.DMatrix(X_val, label=y_val)\n",
-    "watchlist = [ (xgfit,'train'), (xgval, 'test') ]\n",
-    "clfCV = xgb.train(xgb_params, xgfit, num_rounds)\n",
-    "#clfCV = xgb.train(xgb_params, xgfit, num_rounds, watchlist, early_stopping_rounds=20)\n",
+    "# X_fit, X_val, y_fit, y_val=train_test_split(X_train[:], y_train[:], test_size=0.2, random_state=123)\n",
+    "# xgfit = xgb.DMatrix(X_fit, label=y_fit)\n",
+    "# xgval = xgb.DMatrix(X_val, label=y_val)\n",
+    "# watchlist = [ (xgfit,'train'), (xgval, 'test') ]\n",
+    "# clfCV = xgb.train(xgb_params, xgfit, num_rounds)\n",
+    "# #clfCV = xgb.train(xgb_params, xgfit, num_rounds, watchlist, early_stopping_rounds=20)\n",
     "\n",
-    "y_val_pred = clfCV.predict(xgval)\n",
-    "RMSLE_(y_val,y_val_pred)\n",
-    "# {'subsample': 0.7, 'learning_rate': 0.05, 'seed': 5, 'colsample_bytree': 0.7, 'max_depth': 5} 0.44153281251502002\n",
+    "# y_val_pred = clfCV.predict(xgval)\n",
+    "# RMSLE_(y_val,y_val_pred)\n",
+    "# # {'subsample': 0.7, 'learning_rate': 0.05, 'seed': 5, 'colsample_bytree': 0.7, 'max_depth': 5} 0.44153281251502002\n",
     "# {'subsample': 0.7, 'learning_rate': 0.05, 'seed': 5, 'colsample_bytree': 0.7, 'max_depth': 5} #year \n",
     "#0.44060260149809333"
    ]
@@ -6427,7 +6427,7 @@
     "       'max_depth': [5],#[4,5,6,7],\n",
     "       'subsample': [.7], #[.65, 0.7, .75], #\n",
     "       'colsample_bytree': [.7],#[.6, .65, 0.7, 0.75], #\n",
-    "        'seed':np.arange(20,40) #[123]#\n",
+    "        'seed':np.arange(20,50) #[123]#\n",
     "}\n",
     "model = GridSearchCV(estimator=xgbreg, param_grid=param_grid, n_jobs=-1, cv=5, scoring=RMSLE)\n",
     "model.fit(X_train, y_train)\n",
@@ -6526,25 +6526,25 @@
     }
    ],
    "source": [
-    "xgb_params = {\n",
-    "    'eta': 0.045,\n",
-    "    'max_depth': 7,\n",
-    "    'subsample': 0.75,\n",
-    "    'colsample_bytree': 0.75,\n",
-    "    'objective': 'reg:linear',\n",
-    "    'eval_metric': 'rmse',\n",
-    "    'silent': 1,\n",
-    "    'booster' :'gbtree',\n",
-    "    'tuneLength': 3,\n",
-    "    'seed': 123\n",
-    "}\n",
+    "# xgb_params = {\n",
+    "#     'eta': 0.045,\n",
+    "#     'max_depth': 7,\n",
+    "#     'subsample': 0.75,\n",
+    "#     'colsample_bytree': 0.75,\n",
+    "#     'objective': 'reg:linear',\n",
+    "#     'eval_metric': 'rmse',\n",
+    "#     'silent': 1,\n",
+    "#     'booster' :'gbtree',\n",
+    "#     'tuneLength': 3,\n",
+    "#     'seed': 123\n",
+    "# }\n",
     "\n",
-    "dtrain = xgb.DMatrix(X_train, y_train)\n",
-    "dtest = xgb.DMatrix(X_test)\n",
+    "# dtrain = xgb.DMatrix(X_train, y_train)\n",
+    "# dtest = xgb.DMatrix(X_test)\n",
     "\n",
-    "cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=1000, early_stopping_rounds=20,\n",
-    "    verbose_eval=50, show_stdv=False)\n",
-    "cv_output[['train-rmse-mean', 'test-rmse-mean']].plot()"
+    "# cv_output = xgb.cv(xgb_params, dtrain, num_boost_round=1000, early_stopping_rounds=20,\n",
+    "#     verbose_eval=50, show_stdv=False)\n",
+    "# cv_output[['train-rmse-mean', 'test-rmse-mean']].plot()"
    ]
   },
   {
@@ -6557,15 +6557,15 @@
    },
    "outputs": [],
    "source": [
-    "num_boost_rounds = len(cv_output)\n",
-    "model = xgb.train(dict(xgb_params, silent=0), dtrain, num_boost_round=num_boost_rounds)\n",
+    "# num_boost_rounds = len(cv_output)\n",
+    "# model = xgb.train(dict(xgb_params, silent=0), dtrain, num_boost_round=num_boost_rounds)\n",
     "\n",
-    "#fig, ax = plt.subplots(1, 1, figsize=(8, 13))\n",
-    "#xgb.plot_importance(model, max_num_features=50, height=0.5, ax=ax)\n",
+    "# #fig, ax = plt.subplots(1, 1, figsize=(8, 13))\n",
+    "# #xgb.plot_importance(model, max_num_features=50, height=0.5, ax=ax)\n",
     "\n",
-    "y_predict = model.predict(dtest)\n",
-    "#y_predict = np.round(y_predict)#np.round(y_predict * 0.99)\n",
-    "output = pd.DataFrame({'id': id_test, 'price_doc': y_predict})\n",
+    "# y_predict = model.predict(dtest)\n",
+    "# #y_predict = np.round(y_predict)#np.round(y_predict * 0.99)\n",
+    "# output = pd.DataFrame({'id': id_test, 'price_doc': y_predict})\n",
     "\n"
    ]
   },
@@ -6600,8 +6600,8 @@
     }
    ],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(8, 13))\n",
-    "xgb.plot_importance(model, max_num_features=50, height=0.5, ax=ax)"
+    "# fig, ax = plt.subplots(1, 1, figsize=(8, 13))\n",
+    "# xgb.plot_importance(model, max_num_features=50, height=0.5, ax=ax)"
    ]
   },
   {
@@ -6614,7 +6614,7 @@
    },
    "outputs": [],
    "source": [
-    "output.to_csv('submission_Jun4_1_withID.csv', index=False)"
+    "# output.to_csv('submission_Jun4_1_withID.csv', index=False)"
    ]
   },
   {
