--- a/Latest_Iteration_MultiplierTuning_2.ipynb
+++ b/Latest_Iteration_MultiplierTuning_2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -172,7 +172,7 @@
        "6593788.9177278513"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -233,7 +233,7 @@
        "7773440.7512406502"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -262,7 +262,7 @@
        "6637341.6089051161"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -341,27 +341,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5614020.0</td>\n",
+       "      <td>5632583.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8094711.0</td>\n",
+       "      <td>8103520.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5323254.5</td>\n",
+       "      <td>5599423.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5833537.0</td>\n",
+       "      <td>5845963.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4932871.5</td>\n",
+       "      <td>4970532.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -369,14 +369,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5614020.0\n",
-       "1  30475  8094711.0\n",
-       "2  30476  5323254.5\n",
-       "3  30477  5833537.0\n",
-       "4  30478  4932871.5"
+       "0  30474  5632583.0\n",
+       "1  30475  8103520.5\n",
+       "2  30476  5599423.5\n",
+       "3  30477  5845963.0\n",
+       "4  30478  4970532.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +531,8 @@
     "    'colsample_bytree': 0.7,\n",
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
-    "    'silent': 1\n",
+    "    'silent': 1,\n",
+    "    'seed':5\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train, weight=wts)\n",
@@ -554,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -564,10 +565,10 @@
     {
      "data": {
       "text/plain": [
-       "6835169.0"
+       "6848545.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -625,27 +626,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5492250.0</td>\n",
+       "      <td>5548605.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8186438.0</td>\n",
+       "      <td>8466520.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5502798.5</td>\n",
+       "      <td>5481566.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5911602.5</td>\n",
+       "      <td>5629051.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5192441.5</td>\n",
+       "      <td>5264548.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -653,14 +654,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5492250.0\n",
-       "1  30475  8186438.0\n",
-       "2  30476  5502798.5\n",
-       "3  30477  5911602.5\n",
-       "4  30478  5192441.5"
+       "0  30474  5548605.0\n",
+       "1  30475  8466520.0\n",
+       "2  30476  5481566.5\n",
+       "3  30477  5629051.0\n",
+       "4  30478  5264548.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +697,8 @@
     "    'colsample_bytree': 0.7,\n",
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
-    "    'silent': 1\n",
+    "    'silent': 1,\n",
+    "    'seed':5\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train)\n",
@@ -712,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -722,10 +724,10 @@
     {
      "data": {
       "text/plain": [
-       "6861639.5"
+       "6867420.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -792,27 +794,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5422662.0</td>\n",
+       "      <td>5522187.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8384375.0</td>\n",
+       "      <td>8077244.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5564631.5</td>\n",
+       "      <td>5338578.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5580675.5</td>\n",
+       "      <td>5637760.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4775480.5</td>\n",
+       "      <td>5038952.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -820,14 +822,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5422662.0\n",
-       "1  30475  8384375.0\n",
-       "2  30476  5564631.5\n",
-       "3  30477  5580675.5\n",
-       "4  30478  4775480.5"
+       "0  30474  5522187.0\n",
+       "1  30475  8077244.0\n",
+       "2  30476  5338578.0\n",
+       "3  30477  5637760.0\n",
+       "4  30478  5038952.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +922,8 @@
     "    'colsample_bytree': 0.7,\n",
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
-    "    'silent': 1\n",
+    "    'silent': 1,\n",
+    "    'seed':5\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(X_train, y_train, feature_names=df_columns)\n",
@@ -937,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -947,10 +950,10 @@
     {
      "data": {
       "text/plain": [
-       "6783620.0"
+       "6774162.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1008,27 +1011,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5502346.5</td>\n",
+       "      <td>5560001.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8207140.0</td>\n",
+       "      <td>8314010.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5478642.5</td>\n",
+       "      <td>5475916.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5828365.0</td>\n",
+       "      <td>5673535.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>5054131.5</td>\n",
+       "      <td>5159003.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1036,14 +1039,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5502346.5\n",
-       "1  30475  8207140.0\n",
-       "2  30476  5478642.5\n",
-       "3  30477  5828365.0\n",
-       "4  30478  5054131.5"
+       "0  30474  5560001.0\n",
+       "1  30475  8314010.0\n",
+       "2  30476  5475916.0\n",
+       "3  30477  5673535.0\n",
+       "4  30478  5159003.5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1078,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1114,27 +1117,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5303842.0</td>\n",
+       "      <td>5356999.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8007073.5</td>\n",
+       "      <td>8110317.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5280303.5</td>\n",
+       "      <td>5273509.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5627864.0</td>\n",
+       "      <td>5469793.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4859320.0</td>\n",
+       "      <td>4959198.5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1142,14 +1145,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5303842.0\n",
-       "1  30475  8007073.5\n",
-       "2  30476  5280303.5\n",
-       "3  30477  5627864.0\n",
-       "4  30478  4859320.0"
+       "0  30474  5356999.5\n",
+       "1  30475  8110317.0\n",
+       "2  30476  5273509.5\n",
+       "3  30477  5469793.5\n",
+       "4  30478  4959198.5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1180,7 +1183,7 @@
    },
    "outputs": [],
    "source": [
-    "sub.to_csv('submission_jun6_5_Latest_Iteration_2.csv', index=False)"
+    "sub.to_csv('submission_jun7_2_Seed5_Latest_Iteration_2.csv', index=False)"
    ]
   },
   {
