--- a/Latest_Iteration_MultiplierTuning_2.ipynb
+++ b/Latest_Iteration_MultiplierTuning_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -33,31 +33,23 @@
    "outputs": [],
    "source": [
     "# Parameters\n",
-    "micro_humility_factor = 1     #    range from 0 (complete humility) to 1 (no humility)\n",
+    "micro_humility_factor = .99     #    range from 0 (complete humility) to 1 (no humility)\n",
     "macro_humility_factor = 0.96\n",
     "jason_weight = .2\n",
     "bruno_weight = .2\n",
-    "reynaldo_weight = 1 - jason_weight - bruno_weight"
+    "reynaldo_weight = 1 - jason_weight - bruno_weight\n",
+    "seed = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get ready for lots of annoying deprecation warnings\n",
     "import statsmodels.api as sm"
@@ -65,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -128,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -172,7 +164,7 @@
        "6593788.9177278513"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -233,7 +225,7 @@
        "7773440.7512406502"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -262,7 +254,7 @@
        "6637341.6089051161"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -376,7 +368,7 @@
        "4  30478  4970532.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +524,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed':5\n",
+    "    'seed': seed\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train, weight=wts)\n",
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -568,7 +560,7 @@
        "6848545.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -661,7 +653,7 @@
        "4  30478  5264548.5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +690,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed':5\n",
+    "    'seed': seed\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(x_train, y_train)\n",
@@ -714,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -727,7 +719,7 @@
        "6867420.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -829,7 +821,7 @@
        "4  30478  5038952.5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +915,7 @@
     "    'objective': 'reg:linear',\n",
     "    'eval_metric': 'rmse',\n",
     "    'silent': 1,\n",
-    "    'seed':5\n",
+    "    'seed': seed\n",
     "}\n",
     "\n",
     "dtrain = xgb.DMatrix(X_train, y_train, feature_names=df_columns)\n",
@@ -940,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -953,7 +945,7 @@
        "6774162.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1046,7 +1038,7 @@
        "4  30478  5159003.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1081,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1117,27 +1109,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30474</td>\n",
-       "      <td>5356999.5</td>\n",
+       "      <td>5368491.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>30475</td>\n",
-       "      <td>8110317.0</td>\n",
+       "      <td>8094075.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>30476</td>\n",
-       "      <td>5273509.5</td>\n",
+       "      <td>5285654.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>30477</td>\n",
-       "      <td>5469793.5</td>\n",
+       "      <td>5480382.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>30478</td>\n",
-       "      <td>4959198.5</td>\n",
+       "      <td>4973673.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1145,14 +1137,14 @@
       ],
       "text/plain": [
        "      id  price_doc\n",
-       "0  30474  5356999.5\n",
-       "1  30475  8110317.0\n",
-       "2  30476  5273509.5\n",
-       "3  30477  5469793.5\n",
-       "4  30478  4959198.5"
+       "0  30474  5368491.5\n",
+       "1  30475  8094075.5\n",
+       "2  30476  5285654.0\n",
+       "3  30477  5480382.5\n",
+       "4  30478  4973673.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -1183,7 +1175,7 @@
    },
    "outputs": [],
    "source": [
-    "sub.to_csv('submission_jun7_2_Seed5_Latest_Iteration_2.csv', index=False)"
+    "sub.to_csv('submission_jun7_5_Seed5_microHumanilityPt99_Latest_Iteration_2.csv', index=False)"
    ]
   },
   {
